compiler/testData/diagnostics/tests/inlineClasses/sealed/with-value.kt
// LANGUAGE: +InlineClasses, -JvmInlineValueClasses, +SealedInlineClasses
// IGNORE_BACKED: JVM
// SKIP_TXT

sealed inline class Result<!SEALED_INLINE_CLASS_WITH_UNDERLYING_VALUE!>(val value: Any)<!>
